--- a/css/fonts.css
+++ b/css/fonts.css
@@ -37,7 +37,7 @@
 }
 
 @font-face {
-    font-family: 'Poppins';
+    font-family: 'Poppins-SemiBold';
     src: url('../fonts/Poppins-SemiBold.eot');
     src: url('../fonts/Poppins-SemiBold.eot?#iefix') format('embedded-opentype'),
         url('../fonts/Poppins-SemiBold.woff2') format('woff2'),
