--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,16 @@
   --color2: #fff;
   --color3: #ff4900;
   --color4: #111111;
+  --color5: #333333;
+  --color6: #6b6b6b;
+  --color7: #707070;
   --font1: "Poppins-Bold";
   --font2: "Poppins-light";
   --font3: "Poppins-Regular";
   --font4: "Poppins-SemiBold";
+  --font5: "Montserrat";
 }
+/* Main Elements */
 body {
   background-color: var(--color1);
   padding-top: 119px;
@@ -18,9 +23,12 @@ header {
   left: 0px;
   z-index: 1;
   height: 119px;
-  max-width: 1200px;
   width: 100%;
   background-color: var(--color1);
+}
+footer {
+  height: 983px;
+  width: 100%;
 }
 h2 {
   font-family: var(--font1);
@@ -49,11 +57,17 @@ h6 {
   font-family: var(--font2);
   color: var(--color2);
   font-size: 22px;
+  text-transform: capitalize;
 }
 p {
   font-family: var(--font2);
   color: var(--color2);
+  font-size: 18px;
   line-height: 35px;
+  text-align: center;
+  margin-top: 20px;
+  max-width: 800px;
+  width: 100%;
 }
 span {
   font-family: var(--font3);
@@ -61,6 +75,33 @@ span {
   color: var(--color2);
   text-transform: uppercase;
 }
+input {
+  height: 89px;
+  max-width: 414px;
+  width: 100%;
+  background-color: var(--color1);
+  color: var(--color7);
+  font-family: var(--font5);
+  font-size: 18px;
+  border: solid 1px var(--color5);
+}
+input:focus {
+  outline: none;
+}
+textarea {
+  resize: none;
+  grid-column: 1/3;
+  height: 205px;
+  background-color: var(--color1);
+  color: var(--color7);
+  font-family: var(--font5);
+  font-size: 18px;
+  border: solid 1px var(--color5);
+}
+textarea:focus {
+  outline: none;
+}
+/* Font Awesome */
 .fa-wordpress {
   color: var(--color2);
   font-size: 25px;
@@ -75,8 +116,34 @@ span {
   color: var(--color3);
   font-size: 25px;
 }
+.fa-arrow-right {
+  color: var(--color2);
+}
+.fa-phone {
+  color: var(--color2);
+}
+.fa-envelope {
+  color: var(--color2);
+  font-size: 25px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.fa-location-dot {
+  color: var(--color2);
+  font-size: 25px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.fa-brands {
+  color: var(--color2);
+  font-size: 55px;
+}
 .a {
-  margin-left: 116.5px;
+  margin-left: 100.5px;
 }
 .b {
   margin-left: 187.5px;
@@ -93,6 +160,7 @@ span {
 .f {
   margin-left: 51.5px;
 }
+/* Classes */
 .header {
   display: flex;
   justify-content: space-between;
@@ -112,9 +180,6 @@ span {
   color: var(--color2);
   font-size: 18px;
   text-transform: capitalize;
-}
-.nav:hover {
-  background-color: var(--color3);
 }
 .prime {
   font-family: "Poppins-Regular";
@@ -194,6 +259,7 @@ span {
   max-width: 500px;
   width: 100%;
   margin: 42px 0px 26px 0px;
+  text-align: left;
 }
 .right-block {
   display: flex;
@@ -212,16 +278,11 @@ span {
   align-items: center;
   margin-top: 315px;
 }
-.text2 {
-  max-width: 800px;
-  width: 100%;
-  text-align: center;
-  margin-top: 20px;
-}
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(33%, 1fr));
-  margin-bottom: 83.1px;
+  grid-template-columns: repeat(3, 1fr);
+  margin: 76px 0px 83.1px 0px;
+  gap: 61px 55.1px;
 }
 .rectangle {
   display: flex;
@@ -229,6 +290,7 @@ span {
   height: 132.88px;
   max-width: 442px;
   width: 100%;
+  background-color: var(--color4);
   color: var(--color4);
   border-radius: 10px;
   transition: all 0.5s linear;
@@ -273,6 +335,7 @@ span {
   height: 256px;
   width: 328px;
   border: dashed var(--color2);
+  transition: all 0.5s linear;
 }
 .dashed-box:hover {
   background-color: var(--color3);
@@ -287,7 +350,7 @@ span {
 .number {
   text-align: center;
 }
-.text3 {
+.text1 {
   width: 254px;
   text-align: center;
   position: absolute;
@@ -300,4 +363,273 @@ span {
   top: 40%;
   left: 50%;
   transform: translate(-50%, -40%);
+}
+.portfolio {
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+}
+.nav-low {
+  display: flex;
+  justify-content: space-evenly;
+  max-width: 500px;
+  width: 100%;
+  margin: 0 auto;
+  padding-top: 51px;
+}
+.low {
+  position: relative;
+  font-family: var(--font2);
+  color: var(--color2);
+  font-size: 18px;
+  text-transform: capitalize;
+  transition: all 0.5s linear;
+}
+.low:hover {
+  color: var(--color3);
+}
+.low::after {
+  content: "";
+  position: absolute;
+  height: 5%;
+  width: 0%;
+  left: 0;
+  top: 21px;
+  background-color: var(--color3);
+  transition: all 0.5s linear;
+}
+.low:hover::after {
+  width: 100%;
+}
+.grid2 {
+  margin: 100px 10px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  row-gap: 33px;
+}
+.image {
+  height: 483px;
+  max-width: 442px;
+  width: 100%;
+  transition: all 0.5s linear;
+}
+.image:nth-child(1) {
+  background-image: url("../images/dribbble_attachment.jpg");
+}
+.image:nth-child(2) {
+  background-image: url("../images/dribbble-thumbnail.jpg");
+}
+.image:nth-child(3) {
+  background-image: url("../images/kreativ-creative.jpg");
+}
+.image:nth-child(4) {
+  background-image: url("../images/shots_3.jpg");
+}
+.image:nth-child(5) {
+  background-image: url("../images/orion.jpg");
+}
+.image:nth-child(6) {
+  background-image: url("../images/design.jpg");
+}
+.image:hover:before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: var(--color3);
+  opacity: 75%;
+  display: inline-block;
+}
+.testimonials {
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  margin-top: 191px;
+}
+.doe {
+  margin-top: 139px;
+}
+.john {
+  margin: 51px 0px 6px 0px;
+  font-size: 25px;
+  font-family: var(--font1);
+  color: var(--color3);
+  text-transform: capitalize;
+}
+.ceo {
+  text-transform: capitalize;
+}
+.text2 {
+  max-width: 850px;
+  margin-bottom: 360px;
+}
+.laptop {
+  position: relative;
+  background-image: url("../images/laptop.jpg");
+  height: 615px;
+  width: 100%;
+  background-repeat: no-repeat;
+}
+.laptop::before {
+  content: "";
+  height: 100%;
+  width: 100%;
+  background-color: var(--color1);
+  opacity: 75%;
+  display: inline-block;
+}
+.text-block {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.mind {
+  text-align: center;
+  text-transform: capitalize;
+  margin-bottom: 20px;
+}
+.freelancing {
+  margin-bottom: 66px;
+}
+.blog {
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+}
+.trio {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  margin: 87px 0px 80px 0px;
+}
+.triple {
+  height: 462px;
+  max-width: 442px;
+  width: 100%;
+  border-radius: 5px;
+  background-color: var(--color4);
+}
+.picture {
+  margin-bottom: 28px;
+}
+.date {
+  margin-left: 33px;
+}
+.mb {
+  max-width: 330px;
+  line-height: 30px;
+  margin: 14px 0px 38px 33px;
+}
+.learn-more {
+  font-family: var(--font3);
+  font-size: 16px;
+  color: var(--color2);
+  margin: 0px 3px 0px 33px;
+}
+.last-paragraph {
+  text-align: left;
+  max-width: 525px;
+  width: 100%;
+}
+.upper-part {
+  max-width: 1414px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  padding-top: 286px;
+}
+.address {
+  margin-right: 57px;
+}
+.contact-info {
+  padding-top: 130px;
+}
+.bar {
+  display: flex;
+  margin-top: 57px;
+}
+.shard {
+  display: flex;
+  flex-flow: column wrap;
+  margin-left: 25px;
+}
+.circle {
+  position: relative;
+  height: 49px;
+  width: 49px;
+  border-radius: 50px;
+  border: solid var(--color5);
+}
+.sign {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.contact {
+  color: var(--color6);
+  text-transform: capitalize;
+}
+.reach {
+  color: var(--color2);
+  font-family: var(--font2);
+  font-size: 25px;
+  margin-top: 5px;
+  transition: all 0.5s linear;
+}
+.reach:hover {
+  color: var(--color3);
+}
+.find {
+  font-family: var(--font3);
+  font-size: 25px;
+  text-transform: capitalize;
+  margin: 45px 0px 0px 238px;
+}
+.orange-bar {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 83px;
+  max-width: 767px;
+  width: 100%;
+  border-radius: 10px;
+  background-color: var(--color3);
+}
+.grid-3 {
+  margin-top: 49px;
+  max-width: 800px;
+  width: 100%;
+  height: 490px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 33px 50px;
+}
+.orange {
+  display: flex;
+  align-items: center;
+  margin-top: 77px;
+}
+.view-all-1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 83px;
+  width: 241px;
+  border-radius: 10px;
+  background-color: var(--color3);
+  color: var(--color2);
+  font-family: var(--font3);
+  font-size: 22px;
+  text-transform: capitalize;
+  margin-left: 60px;
+}
+.copy {
+  display: flex;
+  justify-content: center;
+  margin: 54px 0px 48px 0px;
+  font-family: var(--font2);
 }
