--- a/css/styles.css
+++ b/css/styles.css
@@ -141,6 +141,10 @@ textarea:focus {
 .fa-brands {
   color: var(--color2);
   font-size: 55px;
+  transition: all 0.5s linear;
+}
+.fa-brands:hover{
+  color: var(--color1);
 }
 .a {
   margin-left: 100.5px;
@@ -163,7 +167,7 @@ textarea:focus {
 /* Classes */
 .header {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   flex-direction: row;
   max-width: 1200px;
@@ -172,7 +176,7 @@ textarea:focus {
 }
 .high-nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   width: 700px;
 }
 .nav {
@@ -181,6 +185,10 @@ textarea:focus {
   font-size: 18px;
   text-transform: capitalize;
 }
+.nav:hover{
+  padding: 90px 50px 50px 50px;
+  background-color: var(--color3);
+}
 .prime {
   font-family: "Poppins-Regular";
   color: white;
@@ -188,8 +196,28 @@ textarea:focus {
   text-transform: capitalize;
   background-color: var(--color3);
   height: 67px;
-  width: 148px;
+  max-width: 148px;
+  width: 100%;
   border-radius: 10px;
+}
+.bar-1{
+  height: 10px;
+  width: 50px;
+  background-color: var(--color3);
+}
+.bar-2{
+  height: 10px;
+  width: 50px;
+  background-color: var(--color3);
+  margin: 5px 0px;
+}
+.bar-3{
+  height: 10px;
+  width: 50px;
+  background-color: var(--color3);
+}
+.burger-bar{
+  display: none;
 }
 .profile {
   background-image: url("../images/portrait.jpg");
@@ -201,7 +229,8 @@ textarea:focus {
 }
 .area {
   position: absolute;
-  width: 642px;
+  max-width: 642px;
+  width: 100%;
   height: 396px;
   top: 175px;
   left: 50px;
@@ -242,9 +271,41 @@ textarea:focus {
 .cv:hover {
   background-color: var(--color3);
 }
+.cv-1 {
+  font-family: var(--font3);
+  font-size: 22px;
+  color: var(--color2);
+  height: 83px;
+  text-transform: capitalize;
+  background-color: var(--color1);
+  max-width: 241px;
+  width: 100%;
+  border-radius: 10px;
+  border-color: var(--color2);
+  transition: all 0.5s linear;
+}
+.cv-1:hover {
+  background-color: var(--color3);
+}
+.cv-2 {
+  font-family: var(--font3);
+  font-size: 22px;
+  color: var(--color2);
+  height: 83px;
+  text-transform: capitalize;
+  background-color: var(--color1);
+  max-width: 241px;
+  width: 100%;
+  border-radius: 10px;
+  border-color: var(--color2);
+  transition: all 0.5s linear;
+}
+.cv-2:hover {
+  background-color: var(--color3);
+}
 .life {
   display: flex;
-  flex-direction: row;
+  flex-flow: row wrap;
   justify-content: space-around;
   max-width: 1700px;
   width: 100%;
@@ -270,6 +331,7 @@ textarea:focus {
 }
 .buttons {
   display: flex;
+  flex-direction: row;
   margin-top: 104px;
 }
 .services {
@@ -277,6 +339,10 @@ textarea:focus {
   flex-direction: column;
   align-items: center;
   margin-top: 315px;
+}
+.nest{
+  display: flex;
+  justify-content: center;
 }
 .grid {
   display: grid;
@@ -326,6 +392,7 @@ textarea:focus {
 }
 .box-line {
   display: flex;
+  flex-flow: row wrap;
   justify-content: space-evenly;
   margin: 294px 0px 333px 0px;
 }
@@ -351,7 +418,8 @@ textarea:focus {
   text-align: center;
 }
 .text1 {
-  width: 254px;
+  max-width: 254px;
+  width: 100%;
   text-align: center;
   position: absolute;
   top: 60%;
@@ -402,7 +470,8 @@ textarea:focus {
   width: 100%;
 }
 .grid2 {
-  margin: 100px 10px;
+  margin: 0 auto;
+  padding: 100px 0px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   row-gap: 33px;
@@ -489,6 +558,7 @@ textarea:focus {
   margin-bottom: 20px;
 }
 .freelancing {
+  text-align: center;
   margin-bottom: 66px;
 }
 .blog {
@@ -498,7 +568,7 @@ textarea:focus {
 }
 .trio {
   display: flex;
-  flex-flow: row wrap;
+  flex-direction: row;
   justify-content: space-evenly;
   margin: 87px 0px 80px 0px;
 }
@@ -511,20 +581,28 @@ textarea:focus {
 }
 .picture {
   margin-bottom: 28px;
+  max-width: 442px;
+  width: 100%;
 }
-.date {
+.block{
+  display: flex;
+  flex-direction: column;
   margin-left: 33px;
 }
+
 .mb {
   max-width: 330px;
   line-height: 30px;
-  margin: 14px 0px 38px 33px;
+  margin: 14px 0px 38px 0px;
+}
+.learn{
+  display: flex;
 }
 .learn-more {
   font-family: var(--font3);
   font-size: 16px;
   color: var(--color2);
-  margin: 0px 3px 0px 33px;
+  margin-right: 10px;
 }
 .last-paragraph {
   text-align: left;
@@ -535,7 +613,7 @@ textarea:focus {
   max-width: 1414px;
   width: 100%;
   display: flex;
-  flex-direction: row;
+  flex-flow: row wrap;
   justify-content: center;
   align-items: center;
   margin: 0 auto;
@@ -543,6 +621,8 @@ textarea:focus {
 }
 .address {
   margin-right: 57px;
+  display: flex;
+  flex-direction: column;
 }
 .contact-info {
   padding-top: 130px;
@@ -591,6 +671,7 @@ textarea:focus {
 }
 .orange-bar {
   display: flex;
+  flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
   height: 83px;
@@ -633,3 +714,23 @@ textarea:focus {
   margin: 54px 0px 48px 0px;
   font-family: var(--font2);
 }
+.bar-4{
+  height: 5px;
+  width: 35px;
+  background-color: var(--color3);
+}
+.bar-5{
+  height: 5px;
+  width: 35px;
+  background-color: var(--color3);
+  margin: 5px 0px;
+}
+.bar-6{
+  height: 5px;
+  width: 35px;
+  background-color: var(--color3);
+}
+.burger-bar-low{
+display: none;
+}
+
